--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>شرکت نمونه</title>
+
     <style>
         body {
-            font-family: Tahoma, sans-serif;
             margin: 0;
+            font-family: Tahoma, sans-serif;
             background-color: #f4f4f4;
             line-height: 1.8;
         }
@@ -20,7 +21,7 @@
 
         nav a {
             color: white;
-            margin: 0 10px;
+            margin: 0 12px;
             text-decoration: none;
             font-weight: bold;
         }
@@ -74,7 +75,7 @@
 
         .modal-content {
             background: white;
-            width: 300px;
+            width: 320px;
             margin: 120px auto;
             padding: 20px;
             border-radius: 8px;
@@ -106,8 +107,8 @@
 <section id="about">
     <h2>درباره شرکت</h2>
     <p>
-        شرکت نمونه در زمینه طراحی و توسعه نرم‌افزار فعالیت می‌کند و هدف ما
-        ارائه محصولات با کیفیت و تیم حرفه‌ای است.
+        شرکت نمونه در زمینه طراحی و توسعه نرم‌افزار فعالیت می‌کند
+        و هدف ما ارائه محصولات با کیفیت و تیم حرفه‌ای است.
     </p>
 </section>
 
@@ -134,19 +135,19 @@
 <section id="team">
     <h2>اعضای تیم</h2>
     <div class="team">
-        <div class="card" onclick="showInfo('علی رضایی', 'مدیرعامل با بیش از ۱۰ سال تجربه')">
-            <h3>علی رضایی</h3>
+        <div class="card" onclick="showInfo('آرزو حاجیان', 'مدیرعامل با بیش از ۱۰ سال تجربه')">
+            <h3>آرزو حاجیان</h3>
             <p>مدیرعامل</p>
         </div>
 
-        <div class="card" onclick="showInfo('سارا محمدی', 'توسعه‌دهنده فرانت‌اند')">
+        <div class="card" onclick="showInfo('سارا محمدی', 'توسعه‌دهنده Front-End')">
             <h3>سارا محمدی</h3>
             <p>Front-End Developer</p>
         </div>
 
-        <div class="card" onclick="showInfo('مهدی حسینی', 'طراح رابط کاربری و تجربه کاربری')">
+        <div class="card" onclick="showInfo('مهدی حسینی', 'طراح UI / UX')">
             <h3>مهدی حسینی</h3>
-            <p>UI/UX Designer</p>
+            <p>UI / UX Designer</p>
         </div>
     </div>
 </section>
@@ -155,7 +156,6 @@
     <p>© 2026 - تمامی حقوق متعلق به شرکت نمونه است</p>
 </footer>
 
-<!-- Modal -->
 <div id="modal">
     <div class="modal-content">
         <h3 id="modalTitle"></h3>
@@ -178,3 +178,4 @@
 
 </body>
 </html>
+
