--- a/products/accounting.html
+++ b/products/accounting.html
@@ -1,33 +1,24 @@
 <!DOCTYPE html>
 <html lang="fa" dir="rtl">
 <head>
-<meta charset="UTF-8">
-<title>سیستم حسابداری پارس</title>
-<style>
-body { font-family: Tahoma; background:#f4f4f4; margin:0 }
-header { background:#1f2a44; color:white; padding:20px; text-align:center }
-section { background:white; margin:20px; padding:30px; border-radius:8px }
-img { width:100%; max-width:500px; display:block; margin:auto }
-a { text-decoration:none; color:#1f2a44; font-weight:bold }
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>خدمات حسابداری</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-
-<header>
-<h1>سیستم حسابداری پارس</h1>
-</header>
-
-<section>
-<img src="../images/accounting.png" alt="حسابداری">
-
-<p>
-سیستم حسابداری پارس برای ثبت اسناد مالی،
-گزارش‌گیری دقیق و مدیریت امور مالی شرکت‌ها
-طراحی شده است.
-</p>
-
-<a href="../index.html">← بازگشت به صفحه اصلی</a>
-</section>
-
+    <section class="product-detail">
+        <h1>مدیریت هوشمند امور مالی و حسابداری</h1>
+        <p>ما با ارائه راه‌کارهای دقیق مالی، به کسب‌وکار شما کمک می‌کنیم تا شفافیت مالی خود را حفظ کند. از تنظیم دفاتر قانونی تا گزارش‌های سود و زیان، همراه شما هستیم.</p>
+        
+        <h3>ویژگی‌های کلیدی:</h3>
+        <ul>
+            <li>تنظیم اظهارنامه‌های مالیاتی</li>
+            <li>مدیریت حقوق و دستمزد کارکنان</li>
+            <li>تحلیل دقیق جریان نقدینگی</li>
+        </ul>
+        
+        <a href="../index.html" class="back-btn">بازگشت به صفحه اصلی</a>
+    </section>
 </body>
 </html>
