--- a/products/online-shop.html
+++ b/products/online-shop.html
@@ -1,33 +1,24 @@
 <!DOCTYPE html>
 <html lang="fa" dir="rtl">
 <head>
-<meta charset="UTF-8">
-<title>فروشگاه اینترنتی نوین</title>
-<style>
-body { font-family: Tahoma; background:#f4f4f4; margin:0 }
-header { background:#1f2a44; color:white; padding:20px; text-align:center }
-section { background:white; margin:20px; padding:30px; border-radius:8px }
-img { width:100%; max-width:500px; display:block; margin:auto }
-a { text-decoration:none; color:#1f2a44; font-weight:bold }
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>فروشگاه آنلاین</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-
-<header>
-<h1>فروشگاه اینترنتی نوین</h1>
-</header>
-
-<section>
-<img src="../images/shop.png" alt="فروشگاه آنلاین">
-
-<p>
-این محصول یک پلتفرم کامل فروش آنلاین شامل
-سبد خرید، پرداخت اینترنتی، مدیریت سفارش‌ها
-و پنل مشتریان می‌باشد.
-</p>
-
-<a href="../index.html">← بازگشت به صفحه اصلی</a>
-</section>
-
+    <section class="product-detail">
+        <h1>کسب‌وکارتان را ۲۴ ساعته کنید</h1>
+        <p>دنیای امروز، دنیای فروش آنلاین است. ما بستری امن، سریع و کاربرپسند برای فروش محصولات شما طراحی می‌کنیم تا مشتریانتان در هر لحظه و هر مکان به شما دسترسی داشته باشند.</p>
+        
+        <h3>ویژگی‌های کلیدی:</h3>
+        <ul>
+            <li>درگاه پرداخت امن و مستقیم</li>
+            <li>طراحی واکنش‌گرا (مناسب موبایل)</li>
+            <li>پنل مدیریت محصولات ساده</li>
+        </ul>
+        
+        <a href="../index.html" class="back-btn">بازگشت به صفحه اصلی</a>
+    </section>
 </body>
 </html>
