--- a/products/project-management.html
+++ b/products/project-management.html
@@ -1,33 +1,24 @@
 <!DOCTYPE html>
 <html lang="fa" dir="rtl">
 <head>
-<meta charset="UTF-8">
-<title>سامانه مدیریت پروژه آریا</title>
-<style>
-body { font-family: Tahoma; background:#f4f4f4; margin:0 }
-header { background:#1f2a44; color:white; padding:20px; text-align:center }
-section { background:white; margin:20px; padding:30px; border-radius:8px }
-img { width:100%; max-width:500px; display:block; margin:auto }
-a { text-decoration:none; color:#1f2a44; font-weight:bold }
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>مدیریت پروژه</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-
-<header>
-<h1>سامانه مدیریت پروژه آریا</h1>
-</header>
-
-<section>
-<img src="../images/project.png" alt="مدیریت پروژه">
-
-<p>
-این سامانه برای برنامه‌ریزی پروژه‌ها، تخصیص وظایف،
-کنترل زمان‌بندی و گزارش‌گیری تیمی طراحی شده است
-و مناسب شرکت‌ها و تیم‌های کاری می‌باشد.
-</p>
-
-<a href="../index.html">← بازگشت به صفحه اصلی</a>
-</section>
-
+    <section class="product-detail">
+        <h1>نظم و بهره‌وری در بالاترین سطح</h1>
+        <p>کنترل پروژه‌های پیچیده دیگر سخت نیست. با ابزارهای مدیریتی ما، تیم شما می‌تواند وظایف را اولویت‌بندی کرده، زمان‌بندی‌ها را رعایت کند و به اهداف مشترک سریع‌تر دست یابد.</p>
+        
+        <h3>ویژگی‌های کلیدی:</h3>
+        <ul>
+            <li>پیگیری لحظه‌ای پیشرفت پروژه‌ها</li>
+            <li>اشتراک‌گذاری آسان مستندات</li>
+            <li>گزارش‌دهی خودکار عملکرد</li>
+        </ul>
+        
+        <a href="../index.html" class="back-btn">بازگشت به صفحه اصلی</a>
+    </section>
 </body>
 </html>
