--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </section>
 
     <footer class="bg-dark text-white text-center py-4">
-        <p class="mb-0">© 2026 کلیه حقوق برای [نام شرکت شما] محفوظ است.</p>
+        <p class="mb-0">© 2026 کلیه حقوق برای [شرکت آرزو] محفوظ است.</p>
     </footer>
 
 </body>
